language/move-prover/tests/sources/functional/specs_in_fun_ref.exp
Move prover returns: exiting with boogie verification errors
error: unknown assertion failed

     ┌── tests/sources/functional/specs_in_fun_ref.move:122:9 ───
     │
 122 │         x
     │         ^
     │
     =     at tests/sources/functional/specs_in_fun_ref.move:111: simple7
     =         n = <redacted>
     =     at tests/sources/functional/specs_in_fun_ref.move:112: simple7
     =         x = <redacted>
     =     at tests/sources/functional/specs_in_fun_ref.move:115: simple7
     =     at tests/sources/functional/specs_in_fun_ref.move:116: simple7
     =     at tests/sources/functional/specs_in_fun_ref.move:118: simple7
     =     at tests/sources/functional/specs_in_fun_ref.move:114: simple7
     =         x = <redacted>
